// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AvatarGroup Ellipsis type - Count Snapshot 1`] = `
.c0 {
  --b-alpha-smooth-corners-box-border-radius: 0;
  --b-alpha-smooth-corners-box-shadow-offset-x: 0;
  --b-alpha-smooth-corners-box-shadow-offset-y: 0;
  --b-alpha-smooth-corners-box-shadow-blur-radius: 0px;
  --b-alpha-smooth-corners-box-shadow-spread-radius: 0px;
  --b-alpha-smooth-corners-box-shadow-color: transparent;
  --b-alpha-smooth-corners-box-padding: 0px;
  --b-alpha-smooth-corners-box-margin: 0px;
  --b-alpha-smooth-corners-box-background-color: transparent;
  box-sizing: content-box;
  margin: var(--b-alpha-smooth-corners-box-margin);
  background-color: var(--b-alpha-smooth-corners-box-background-color);
  background-image: var(--b-alpha-smooth-corners-box-background-image);
  background-size: cover;
  border-radius: var(--b-alpha-smooth-corners-box-border-radius);
  box-shadow: var(--b-alpha-smooth-corners-box-shadow-offset-x) var(--b-alpha-smooth-corners-box-shadow-offset-y) var(--b-alpha-smooth-corners-box-shadow-blur-radius) var(--b-alpha-smooth-corners-box-shadow-spread-radius) var(--b-alpha-smooth-corners-box-shadow-color);
}

@supports (background:paint(smooth-corners)) {
  .c0[data-state="enabled"] {
    padding: var(--b-alpha-smooth-corners-box-padding);
    margin: calc(var(--b-alpha-smooth-corners-box-margin) + (-1 * var(--b-alpha-smooth-corners-box-padding)));
    background: paint(smooth-corners);
    border-radius: 0;
    border-image-source: var(--b-alpha-smooth-corners-box-background-image);
    box-shadow: none;
    --smooth-corners: var(--b-alpha-smooth-corners-box-border-radius);
    --smooth-corners-shadow: var(--b-alpha-smooth-corners-box-shadow-offset-x) var(--b-alpha-smooth-corners-box-shadow-offset-y) var(--b-alpha-smooth-corners-box-shadow-blur-radius) var(--b-alpha-smooth-corners-box-shadow-spread-radius) var(--b-alpha-smooth-corners-box-shadow-color);
    --smooth-corners-bg-color: var(--b-alpha-smooth-corners-box-background-color);
    --smooth-corners-padding: var(--b-alpha-smooth-corners-box-padding);
    --smooth-corners-radius-unit: var(--b-alpha-smooth-corners-box-border-radius-type);
  }
}

<div
  class="AvatarGroup"
  role="group"
  style="--b-avatar-group-spacing: 4px; --b-avatar-group-size: 24px;"
>
  <div
    class="Avatar size-24 margin"
    data-disabled="false"
    data-testid="bezier-react-avatar-wrapper"
  >
    <div
      aria-label="Christian Nwamba"
      class="c0 AvatarImage"
      data-state="disabled"
      data-testid="bezier-react-avatar"
      style="--b-avatar-status-gap: -2px; --b-alpha-smooth-corners-box-border-radius: 42%; --b-alpha-smooth-corners-box-border-radius-type: string; --b-alpha-smooth-corners-box-shadow-blur-radius: 0px; --b-alpha-smooth-corners-box-shadow-spread-radius: 0px; --b-alpha-smooth-corners-box-padding: 0px; --b-alpha-smooth-corners-box-margin: 0px; --b-alpha-smooth-corners-box-background-color: var(--bg-white-normal); --b-alpha-smooth-corners-box-background-image: url(https://www.google.com);"
    />
  </div>
  <div
    class="Avatar size-24 margin"
    data-disabled="false"
    data-testid="bezier-react-avatar-wrapper"
  >
    <div
      aria-label="Kola Tioluwani"
      class="c0 AvatarImage"
      data-state="disabled"
      data-testid="bezier-react-avatar"
      style="--b-avatar-status-gap: -2px; --b-alpha-smooth-corners-box-border-radius: 42%; --b-alpha-smooth-corners-box-border-radius-type: string; --b-alpha-smooth-corners-box-shadow-blur-radius: 0px; --b-alpha-smooth-corners-box-shadow-spread-radius: 0px; --b-alpha-smooth-corners-box-padding: 0px; --b-alpha-smooth-corners-box-margin: 0px; --b-alpha-smooth-corners-box-background-color: var(--bg-white-normal); --b-alpha-smooth-corners-box-background-image: url(https://www.google.com);"
    />
  </div>
  <div
    class="Avatar size-24 margin"
    data-disabled="false"
    data-testid="bezier-react-avatar-wrapper"
  >
    <div
      aria-label="Kent Dodds"
      class="c0 AvatarImage"
      data-state="disabled"
      data-testid="bezier-react-avatar"
      style="--b-avatar-status-gap: -2px; --b-alpha-smooth-corners-box-border-radius: 42%; --b-alpha-smooth-corners-box-border-radius-type: string; --b-alpha-smooth-corners-box-shadow-blur-radius: 0px; --b-alpha-smooth-corners-box-shadow-spread-radius: 0px; --b-alpha-smooth-corners-box-padding: 0px; --b-alpha-smooth-corners-box-margin: 0px; --b-alpha-smooth-corners-box-background-color: var(--bg-white-normal); --b-alpha-smooth-corners-box-background-image: url(https://www.google.com);"
    />
  </div>
  <div
    class="Avatar size-24 margin"
    data-disabled="false"
    data-testid="bezier-react-avatar-wrapper"
  >
    <div
      aria-label="Ryan Florence"
      class="c0 AvatarImage"
      data-state="disabled"
      data-testid="bezier-react-avatar"
      style="--b-avatar-status-gap: -2px; --b-alpha-smooth-corners-box-border-radius: 42%; --b-alpha-smooth-corners-box-border-radius-type: string; --b-alpha-smooth-corners-box-shadow-blur-radius: 0px; --b-alpha-smooth-corners-box-shadow-spread-radius: 0px; --b-alpha-smooth-corners-box-padding: 0px; --b-alpha-smooth-corners-box-margin: 0px; --b-alpha-smooth-corners-box-background-color: var(--bg-white-normal); --b-alpha-smooth-corners-box-background-image: url(https://www.google.com);"
    />
  </div>
  <div
    class="Avatar size-24 margin"
    data-disabled="false"
    data-testid="bezier-react-avatar-wrapper"
  >
    <div
      aria-label="Dan Abrahmov"
      class="c0 AvatarImage"
      data-state="disabled"
      data-testid="bezier-react-avatar"
      style="--b-avatar-status-gap: -2px; --b-alpha-smooth-corners-box-border-radius: 42%; --b-alpha-smooth-corners-box-border-radius-type: string; --b-alpha-smooth-corners-box-shadow-blur-radius: 0px; --b-alpha-smooth-corners-box-shadow-spread-radius: 0px; --b-alpha-smooth-corners-box-padding: 0px; --b-alpha-smooth-corners-box-margin: 0px; --b-alpha-smooth-corners-box-background-color: var(--bg-white-normal); --b-alpha-smooth-corners-box-background-image: url(https://www.google.com);"
    />
  </div>
  <div
    class="Avatar size-24 margin"
    data-disabled="false"
    data-testid="bezier-react-avatar-wrapper"
  >
    <div
      aria-label="Prosper Otemuyiwa"
      class="c0 AvatarImage"
      data-state="disabled"
      data-testid="bezier-react-avatar"
      style="--b-avatar-status-gap: -2px; --b-alpha-smooth-corners-box-border-radius: 42%; --b-alpha-smooth-corners-box-border-radius-type: string; --b-alpha-smooth-corners-box-shadow-blur-radius: 0px; --b-alpha-smooth-corners-box-shadow-spread-radius: 0px; --b-alpha-smooth-corners-box-padding: 0px; --b-alpha-smooth-corners-box-margin: 0px; --b-alpha-smooth-corners-box-background-color: var(--bg-white-normal); --b-alpha-smooth-corners-box-background-image: url(https://www.google.com);"
    />
  </div>
  <div
    class="AvatarEllipsisCountWrapper"
    style="--b-avatar-group-ellipsis-mr: 5px; --b-avatar-group-ellipsis-ml: 4px;"
  >
    <span
      class="Text typo-13 margin AvatarEllipsisCount"
      data-testid="bezier-react-text"
    >
      +1
    </span>
  </div>
</div>
`;

exports[`AvatarGroup Ellipsis type - Icon Snapshot 1`] = `
.c0 {
  --b-alpha-smooth-corners-box-border-radius: 0;
  --b-alpha-smooth-corners-box-shadow-offset-x: 0;
  --b-alpha-smooth-corners-box-shadow-offset-y: 0;
  --b-alpha-smooth-corners-box-shadow-blur-radius: 0px;
  --b-alpha-smooth-corners-box-shadow-spread-radius: 0px;
  --b-alpha-smooth-corners-box-shadow-color: transparent;
  --b-alpha-smooth-corners-box-padding: 0px;
  --b-alpha-smooth-corners-box-margin: 0px;
  --b-alpha-smooth-corners-box-background-color: transparent;
  box-sizing: content-box;
  margin: var(--b-alpha-smooth-corners-box-margin);
  background-color: var(--b-alpha-smooth-corners-box-background-color);
  background-image: var(--b-alpha-smooth-corners-box-background-image);
  background-size: cover;
  border-radius: var(--b-alpha-smooth-corners-box-border-radius);
  box-shadow: var(--b-alpha-smooth-corners-box-shadow-offset-x) var(--b-alpha-smooth-corners-box-shadow-offset-y) var(--b-alpha-smooth-corners-box-shadow-blur-radius) var(--b-alpha-smooth-corners-box-shadow-spread-radius) var(--b-alpha-smooth-corners-box-shadow-color);
}

@supports (background:paint(smooth-corners)) {
  .c0[data-state="enabled"] {
    padding: var(--b-alpha-smooth-corners-box-padding);
    margin: calc(var(--b-alpha-smooth-corners-box-margin) + (-1 * var(--b-alpha-smooth-corners-box-padding)));
    background: paint(smooth-corners);
    border-radius: 0;
    border-image-source: var(--b-alpha-smooth-corners-box-background-image);
    box-shadow: none;
    --smooth-corners: var(--b-alpha-smooth-corners-box-border-radius);
    --smooth-corners-shadow: var(--b-alpha-smooth-corners-box-shadow-offset-x) var(--b-alpha-smooth-corners-box-shadow-offset-y) var(--b-alpha-smooth-corners-box-shadow-blur-radius) var(--b-alpha-smooth-corners-box-shadow-spread-radius) var(--b-alpha-smooth-corners-box-shadow-color);
    --smooth-corners-bg-color: var(--b-alpha-smooth-corners-box-background-color);
    --smooth-corners-padding: var(--b-alpha-smooth-corners-box-padding);
    --smooth-corners-radius-unit: var(--b-alpha-smooth-corners-box-border-radius-type);
  }
}

<div
  class="AvatarGroup"
  role="group"
  style="--b-avatar-group-spacing: 4px; --b-avatar-group-size: 24px;"
>
  <div
    class="Avatar size-24 margin"
    data-disabled="false"
    data-testid="bezier-react-avatar-wrapper"
  >
    <div
      aria-label="Christian Nwamba"
      class="c0 AvatarImage"
      data-state="disabled"
      data-testid="bezier-react-avatar"
      style="--b-avatar-status-gap: -2px; --b-alpha-smooth-corners-box-border-radius: 42%; --b-alpha-smooth-corners-box-border-radius-type: string; --b-alpha-smooth-corners-box-shadow-blur-radius: 0px; --b-alpha-smooth-corners-box-shadow-spread-radius: 0px; --b-alpha-smooth-corners-box-padding: 0px; --b-alpha-smooth-corners-box-margin: 0px; --b-alpha-smooth-corners-box-background-color: var(--bg-white-normal); --b-alpha-smooth-corners-box-background-image: url(https://www.google.com);"
    />
  </div>
  <div
    class="Avatar size-24 margin"
    data-disabled="false"
    data-testid="bezier-react-avatar-wrapper"
  >
    <div
      aria-label="Kola Tioluwani"
      class="c0 AvatarImage"
      data-state="disabled"
      data-testid="bezier-react-avatar"
      style="--b-avatar-status-gap: -2px; --b-alpha-smooth-corners-box-border-radius: 42%; --b-alpha-smooth-corners-box-border-radius-type: string; --b-alpha-smooth-corners-box-shadow-blur-radius: 0px; --b-alpha-smooth-corners-box-shadow-spread-radius: 0px; --b-alpha-smooth-corners-box-padding: 0px; --b-alpha-smooth-corners-box-margin: 0px; --b-alpha-smooth-corners-box-background-color: var(--bg-white-normal); --b-alpha-smooth-corners-box-background-image: url(https://www.google.com);"
    />
  </div>
  <div
    class="Avatar size-24 margin"
    data-disabled="false"
    data-testid="bezier-react-avatar-wrapper"
  >
    <div
      aria-label="Kent Dodds"
      class="c0 AvatarImage"
      data-state="disabled"
      data-testid="bezier-react-avatar"
      style="--b-avatar-status-gap: -2px; --b-alpha-smooth-corners-box-border-radius: 42%; --b-alpha-smooth-corners-box-border-radius-type: string; --b-alpha-smooth-corners-box-shadow-blur-radius: 0px; --b-alpha-smooth-corners-box-shadow-spread-radius: 0px; --b-alpha-smooth-corners-box-padding: 0px; --b-alpha-smooth-corners-box-margin: 0px; --b-alpha-smooth-corners-box-background-color: var(--bg-white-normal); --b-alpha-smooth-corners-box-background-image: url(https://www.google.com);"
    />
  </div>
  <div
    class="Avatar size-24 margin"
    data-disabled="false"
    data-testid="bezier-react-avatar-wrapper"
  >
    <div
      aria-label="Ryan Florence"
      class="c0 AvatarImage"
      data-state="disabled"
      data-testid="bezier-react-avatar"
      style="--b-avatar-status-gap: -2px; --b-alpha-smooth-corners-box-border-radius: 42%; --b-alpha-smooth-corners-box-border-radius-type: string; --b-alpha-smooth-corners-box-shadow-blur-radius: 0px; --b-alpha-smooth-corners-box-shadow-spread-radius: 0px; --b-alpha-smooth-corners-box-padding: 0px; --b-alpha-smooth-corners-box-margin: 0px; --b-alpha-smooth-corners-box-background-color: var(--bg-white-normal); --b-alpha-smooth-corners-box-background-image: url(https://www.google.com);"
    />
  </div>
  <div
    class="Avatar size-24 margin"
    data-disabled="false"
    data-testid="bezier-react-avatar-wrapper"
  >
    <div
      aria-label="Dan Abrahmov"
      class="c0 AvatarImage"
      data-state="disabled"
      data-testid="bezier-react-avatar"
      style="--b-avatar-status-gap: -2px; --b-alpha-smooth-corners-box-border-radius: 42%; --b-alpha-smooth-corners-box-border-radius-type: string; --b-alpha-smooth-corners-box-shadow-blur-radius: 0px; --b-alpha-smooth-corners-box-shadow-spread-radius: 0px; --b-alpha-smooth-corners-box-padding: 0px; --b-alpha-smooth-corners-box-margin: 0px; --b-alpha-smooth-corners-box-background-color: var(--bg-white-normal); --b-alpha-smooth-corners-box-background-image: url(https://www.google.com);"
    />
  </div>
  <div
    class="AvatarEllipsisIconWrapper"
    data-testid="bezier-react-avatar-group-ellipsis-icon"
  >
    <div
      class="c0 AvatarEllipsisIcon"
      data-state="disabled"
      style="--b-alpha-smooth-corners-box-border-radius: 42%; --b-alpha-smooth-corners-box-border-radius-type: string; --b-alpha-smooth-corners-box-shadow-blur-radius: 0px; --b-alpha-smooth-corners-box-shadow-spread-radius: 0px; --b-alpha-smooth-corners-box-padding: 0px; --b-alpha-smooth-corners-box-margin: 0px; --b-alpha-smooth-corners-box-background-color: var(--bgtxt-absolute-black-lightest);"
    >
      <svg
        class="Icon margin"
        data-testid="bezier-react-icon"
        fill="none"
        height="16"
        style="--b-icon-color: var(--bgtxt-absolute-white-dark);"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M2.5 12a2.257 2.257 0 0 0 2.25 2.25A2.257 2.257 0 0 0 7 12a2.257 2.257 0 0 0-2.25-2.25A2.257 2.257 0 0 0 2.5 12m9.5 2.25A2.257 2.257 0 0 1 9.75 12 2.257 2.257 0 0 1 12 9.75 2.257 2.257 0 0 1 14.25 12 2.257 2.257 0 0 1 12 14.25m7.25 0A2.257 2.257 0 0 1 17 12a2.257 2.257 0 0 1 2.25-2.25A2.257 2.257 0 0 1 21.5 12a2.257 2.257 0 0 1-2.25 2.25"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="Avatar size-24 margin"
      data-disabled="false"
      data-testid="bezier-react-avatar-wrapper"
    >
      <div
        aria-label="Prosper Otemuyiwa"
        class="c0 AvatarImage"
        data-state="disabled"
        data-testid="bezier-react-avatar"
        style="--b-avatar-status-gap: -2px; --b-alpha-smooth-corners-box-border-radius: 42%; --b-alpha-smooth-corners-box-border-radius-type: string; --b-alpha-smooth-corners-box-shadow-blur-radius: 0px; --b-alpha-smooth-corners-box-shadow-spread-radius: 0px; --b-alpha-smooth-corners-box-padding: 0px; --b-alpha-smooth-corners-box-margin: 0px; --b-alpha-smooth-corners-box-background-color: var(--bg-white-normal); --b-alpha-smooth-corners-box-background-image: url(https://www.google.com);"
      />
    </div>
  </div>
</div>
`;
